--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <option value="confidence">confidence</option>
   <option value="gratitude">gratitude</option>
   <option value="motivation">motivation</option>
+  <option value="career">career</option>
+  <option value="love">love</option>
 </select>
 </main>
 
