--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 </header>
 
 <main>
+<div class="personalization">
+  <input type="text" id="userName" placeholder="Enter your name">
+  <button onclick="saveName()">Save</button>
+</div>
+
   <div id="affirmation-box">Your daily affirmation will appear here</div>
  <button id="new-affirmation">Get New Affirmation</button>
 <select id="category">
