--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
   <p>Speaking positivity into existence, one word at a time.</p>
 </footer>
 
-<script src="script.js"></script>
+<div id="root"></div>
 </body>
 </html>
